# python-project-83

./: .env  .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: main.yml
page_analyzer/: __init__.py  app.py  bs.py  db.py  index.html
page_analyzer/templates/: 404.html  500.html  base.html  index.html  messages.html  sites.html  url.html  urls.html
